# dolfiny

./: .devcontainer.json  .gitignore  .gitlab-ci.yml  README.md  _typos.toml  apt-requirements.txt  example.py  pyproject.toml  tao_obstacle.py  tao_obstacle_bounds.py
.devcontainer/: fix.sh
book/: bookstrap.py  getting-involved.md  index.md  myst.yml  references.bib
book/projects/: idea-1.md  idea-2.md  idea-3.md
demo/: README.md
demo/beam/: beam_curved_finitestrain_bstar.py  beam_curved_finitestrain_bstar_reissner.py  beam_curved_finitestrain_bzero.py  postprocess_matplotlib.py
demo/beltrami/: plot_box_pyvista.py  solid_stressonly.py
demo/bingham/: bingham_block.py  bingham_lm_block.py
demo/continuation/: continuation_planartruss.py  continuation_planartruss_disp.py  continuation_schwedler.py  continuation_spatialtruss.py  continuation_stardome.py  mesh_opencylinder_gmshapi.py  tdc_shell_naghdi_cylindrical_roof.py  tdc_shell_naghdi_cylindrical_roof_sze2004.csv
demo/electrodiffusion/: diffusor.FCStd  diffusor.step  diffusor_4species_steadystate.py  mesh_diffusor_gmshapi.py  plot_diffusor_pyvista.py  pnp_4species_steadystate.py  pnp_4species_steadystate_scaled.py  pnp_4species_transient.py
demo/obstacle/: membrane.py  montreal.py
demo/obstacle/media/: README.md
demo/plasticity/: J2_monolithic.py  mesh_iso6892_gmshapi.py  mesh_perforated.py  rankine.py  solid_plasticity_monolithic.py
demo/plasticity_rankine/: mesh_notched.py  rankine.py
demo/running_error/: neo_hooke_2d.py
demo/shape_optimization/: truss_2d_compliance.py
demo/spectral/: mesh_tube3d_gmshapi.py  plot_tube3d_pyvista.py  solid_elasticity.py  solid_elasticity_classic.py  solid_elasticity_spectral.py
demo/structural_optimisation/: ge_bracket_rotated_nonds.step  topopt_2d_cantilever.py  topopt_3d_ge_bracket.py  topopt_simp.py  truss_sizing.py
demo/tdnns/: hdivdiv.py  mesh_spanner_gmshapi.py  plot_spanner_pyvista.py  solid_displ_3d_spanner.py  solid_mixed_3d_spanner.py  solid_tdnns_2d_cantilever.py  solid_tdnns_3d_cantilever.py  solid_tdnns_3d_spanner.py
demo/tmc/: Cbox_HuLu_2D.py  Cbox_Wriggers_2D.py  Cbox_Wriggers_3D.py  Hertz_Wriggers_3D.py  Hertz_penalty_3D.py  check_quadrature.py  mesh_Hertz3D_gmsh.py  notes.md
demo/tmc/2D/: Cbox_HuLu_2D.py  Cbox_Wriggers_2D.py  paper_res.csv
demo/tmc/3D/: Cbox_Wriggers_3D.py  Hertz_Wriggers_3D.py  Hertz_penalty_3D.py  mesh_Hertz3D_gmsh.py
demo/topology_optimization/: phasefield.py
demo/units/: helmholtz.py  navier_stokes.py
demo/vsolid/: duffing.py  mesh_block3d_gmshapi.py  solid_disp_tda.py  solid_dispstress_tda.py  solid_velostress_tda.py
docker/: Dockerfile
src/dolfiny/: __init__.py  conlin.py  continuation.py  expression.py  fem.py  function.py  gmsh.py  inequality.py  interpolation.py  invariants.py  io.py  la.py  localsolver.h  localsolver.py  logging.py  mesh.py  mesh_generation.py  mma.py  odeint.py  projection.py  pyvista.py  restriction.py  slepcblockproblem.py  slepcproblem.py  snesblockproblem.py  snesproblem.py  sqp.py  taoblockproblem.py  taoproblem.py  ufl_utils.py  units.py  utils.py
src/dolfiny/cpp/: CMakeLists.txt  __init__.py  bindings.cpp  running_error.h
test/: standalone_odeint.py
test/unit/: test_continuation.py  test_expression.py  test_function.py  test_gmsh.py  test_inequality.py  test_interpolation.py  test_io.py  test_la.py  test_localsolver.py  test_mesh.py  test_optimisation.py  test_projection.py  test_restriction.py  test_running_error.py  test_slepcproblem.py  test_snesproblem.py  test_taoproblem.py  test_ufl_utils.py  test_units.py
