[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "dolfiny"
version = "0.12.0.dev0"
description = "High-level and convenience wrappers for DOLFINx, the FEniCS library."
authors = [
  { name = "Andreas Zilian", email = "andreas.zilian@uni.lu" },
  { name = "Michal Habera", email = "michal.habera@gmail.com" },
  { name = "Paul T. Kühner", email = "paul.kuehner@uni.lu" },
]
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
  "fenics-dolfinx>=0.12.0.dev0,<0.13.0",
  "matplotlib",
  "pygraphviz",
  "pyvista[jupyter]>=0.45.0",
  "scipy",
  "sympy",
  "imageio",
  "ffcx-backends @ git+https://github.com/fenics-dolfiny/ffcx-backends",
]

[project.optional-dependencies]
jit = ["numba", "cppyy>=3.1.0"]
book = ["jupytext", "jupyter-book>=2.0.0", "jupyter"]
all = ["dolfiny[book,jit]"]

[dependency-groups]
lint-format = ["ruff", "clang-format", "gersemi"]
lint-typing = ["mypy", "ty"]
lint-spell-check = ["typos"]
lint = [
  { include-group = "lint-format" },
  { include-group = "lint-typing" },
  { include-group = "lint-spell-check" },
]
dev = ["pdbpp"]
test = ["pytest-xdist", "coverage"]

[project.urls]
repository = "https://github.com/fenics-dolfiny/dolfiny"

[tool.setuptools.package-data]
dolfiny = ["localsolver.h", "running_error.h"]

[tool.scikit-build]
cmake.source-dir = "src/dolfiny/cpp"
wheel.packages = ["src/dolfiny"]
install.strip = false

[tool.mypy]
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = false
check_untyped_defs = false
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pyvista.*"
follow_imports = "skip"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort - use standalone isort
  "RUF", # Ruff-specific rules
  "UP",  # pyupgrade
  "ICN", # flake8-import-conventions
  "NPY", # numpy-specific rules
  "FLY", # use f-string not static joins
]
ignore = [
  "D1",   # undocumented
  "D203", # incompatible with D203 `no-blank-line-before-class`
  "D213", # incomptabile with D212 `multi-line-summary-first-line`
]
unfixable = [
  "F401", # skip removal of unused imports
]

allowed-confusables = ["σ", "×"]

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"] # no docstring linting outside of src/

[tool.ruff.lint.isort]
known-first-party = ["dolfiny"]
known-third-party = ["cppyy", "gmsh", "numba", "numpy", "pytest", "pyvista"]
section-order = [
  "future",
  "standard-library",
  "mpi",
  "fenics",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
"fenics" = ["basix", "dolfinx", "ffcx", "ufl"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"matplotlib.pyplot" = "plt"
"mpi4py.MPI" = "MPI"
"numpy.typing" = "npt"
"numpy" = "np"
"petsc4py.PETSc" = "PETSc"
"pyvista" = "pv"

[tool.ruff.lint.flake8-import-conventions]
banned-from = [
  "matplotlib.pyplot",
  "mpi4py.MPI",
  "numpy",
  "petsc4py.PETSc",
  "pyvista",
]

[tool.ty.rules]
possibly-missing-submodule = "ignore"
unused-type-ignore-comment = "ignore"
unresolved-import = "ignore"
not-iterable = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
unsupported-operator = "ignore"
call-non-callable = "ignore"
not-subscriptable = "ignore"

[tool.pytest.ini_options]
addopts = "--color=yes --junitxml=report.xml"

[tool.coverage.run]
parallel = true
branch = true
source = ["dolfiny"]

[tool.typos.default]
extend-ignore-identifiers-re = ["Ue", "2nd"]
